skywalking/overlays/dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-skywalking
  namespace: istio-system
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["skywalking.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: skywalking-ui
        weight: 1
        port: 8080
    - backendRefs:
      - name: skywalking-ui
        weight: 1
        port: 8080
